testsuite/tests/properties/invalid_eq/int_bool.lkt
import common

class Example: FooNode {
    @exported fun prop(): Bool = 1 == true
}
